# stoneshard-toolsv2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
scripts/: setup.ps1  setup.sh  unpack_msl.py
toolsv2/: ART_GENERATOR.md  GLOW_EXPORT.md  __init__.py  adjacency.py  art_generator.py  base_renderer.py  connection_core_geometry.py  definitions_loader.py  domain_builder.py  eligibility.py  entry_queries.py  full_solve_orchestrator.py  geometry.py  graph_content.py  grid_expansion_policy.py  layout_estimation.py  layout_profiles.py  module_contracts.md  placement_orchestrator.py  placement_policy_catalog.py  placement_policy_contracts.py  placement_solver.py  primitive_expander.py  production_family_catalog.py  production_node_definitions.py  production_visual_catalog.py  profile.py  propagation.py  render_behavior_registry.py  render_contracts.py  render_export.py  render_layout_profiles.py  render_mapper.py  render_resolver.py  render_template_loader.py  route_commit.py  route_orchestrator.py  router.py  routing_policy.py  run_art_generator.py  (+14 more)
toolsv2/adapters/: __init__.py
toolsv2/config/: toolsv2.ini
toolsv2/examples/: ricochet.json  test_branch.json  test_skill_tree.json  vanilla_arcanistics.json  vanilla_magic_mastery.json
toolsv2/glow/: __init__.py  contracts.py  export.py  rasterizer.py  section_builder.py  serialization.py
toolsv2/tests/: __init__.py  test_art_generator.py  test_base_renderer.py  test_definitions_loader.py  test_domain_builder.py  test_glow_export.py  (+36 more)
(+11 files in other folders)
